made new css to the bb website - just experimenting

--- a/index.html
+++ b/index.html
@@ -4,28 +4,27 @@
         <meta charset="UTF-8">
         <title>Vangbergs bed and breakfast</title>
         <link rel="stylesheet" href="css/normalize.css">
-        <link rel="stylesheet" href="css/main.css">
+        <link rel="stylesheet" href="css/work.css">
     </head>
-    <body class="wrapper-bigger">
-        <section class="wrapper-smaller">
+    <body>
             <header>
                 <div class="full-width">
-                <h1><span class="Vangbergs">Vangbergs</span> <br> Bed and Breakfast</h1>
-                        <nav>
-                            <ul>
-                                <li><a href="#hjem">Hjem</a></li>
-                                <li><a href="#værelser">Værelser</a></li>
-                                <li><a href="#priser">Priser</a></li>
-                                <li><a href="#kontakt">Kontakt</a></li>
-                            </ul>
-                        </nav>
+                            <nav>
+                                <ul>
+                                    <li><a href="#hjem">Hjem</a></li>
+                                    <li><a href="#værelser">Værelser</a></li>
+                                    <li><a href="#priser">Priser</a></li>
+                                    <li><a href="#kontakt">Kontakt</a></li>
+                                </ul>
+                            </nav>
+                    <h1><span class="Vangbergs">Vangbergs</span> <br> <span class="bb">bed and breakfast</h1></span>
                     </div>
                 </div>
             </header>
             <main>
                 <section id="hjem">
                     <div class="full-width">
-                        <h3>Lidt om Vangbergs B&B</h2>
+                        <h2>Lidt om Vangbergs B&B</h2>
                         <div class="half-width" id="h-one">
                             <p>Vi har lagt meget sjæl og arbejde i at gøre Korup Skole til et hyggeligt lille univers – et sted hvor der er rart at være. Vi elsker selv at være her og vil gerne dele det med andre, derfor har vi åbnet Vangbergs B&B. Vores skole er det sted, vi lever vores liv, og det bærer det præg af.</p>
                         </div>
@@ -36,49 +35,43 @@
                 </section>
                 <section id="værelser">
                     <div class="full-width">
-                        <h3>Værelserne</h3>
-                        <div class="half-width">
+                        <h2>Værelser</h2>
+                        <div class="half-width" id="v-one">
                             <p>Vi har to dejlige og lyse dobbeltværelser, med fælles badeværelse. Adgang til hyggeligt køkken, hvor morgenmaden serveres. Her er også mulighed for at lave te og kaffe eller lidt enkel mad. Morgenmaden er primært baseret på økologiske råvarer og består af hjemmebagt brød, oste, pålæg og frugt.</p>
                         </div>
-                        <div class="half-width">
-                            <h4>Faciliteter og husregler</h4>
+                        <div class="half-width" id="v-two">
+                            <p><span class="faciliteter">Faciliteter og husregler</span><span class="kolon">:</span></p>
                             <p>Badeværelse <br>
                                 Køkken <br>
                                 Wi-fi <br>
                                 Teresse <br>
-                                Røgfrit</p>
+                                Røgfrit
+                            </p>
                         </div>
-                        <div class="full-width">
-                            <div class="third-width">
-                                <img src="img/yard.jpg" alt="yard" class="scaled" id="yard"/>
-                            </div>
-                            <div class="third-width">
-                                <img src="img/entry.jpg" alt="entry" class="scaled" id="entry"/>
-                            </div>
-                            <div class="third-width">
-                                <img src="img/bed.jpg" alt="bed" class="scaled" id="bed"/>
-                            </div>
-                        </div>  
                     </div>
                 </section>
                 <section id="priser">
-                    <div class="full-width">
-                        <h3>Priser</h3>
-                        <p>Enkeltværelse DKK 300,-</p>
-                        <p>Dobbeltværelse DKK 475,-</p>
-                        <p>Morgenmad DKK 50,-</p>
-                        <p>Priserne er inkl. sengelinned og håndklæder</p>
+                    <div class="full-width-p">
+                        <div class="half-width" id="p-one">
+                            <h2>Priser</h2>
+                        </div>
+                        <div class="half-width" id="p-two">
+                            <p>Enkeltværelse DKK 300,-</p>
+                            <p>Dobbeltværelse DKK 475,-</p>
+                            <p>Morgenmad DKK 50,-</p>
+                            <p>Priserne er inkl. sengelinned og håndklæder</p>
+                        </div>
                     </div>
                 </section>
-                <section id="kontakt-os">
+                <section id="kontakt">
                     <div class="full-width">
-                        <h3>Kontakt os</h3>
-                        <div class="half-width">
-                            <img src="img/Marianne.jpg" alt="Marianne Vangberg" id="marianne-img"/>
+                        <h2>Kontakt os</h2>
+                        <div class="half-width" id="k-one">
+                            <img src="img/Marianne.jpg" alt="Marianne Vangberg" id="marianne"/>
                         </div>
-                        <div class="half-width" id=kontakt>
+                        <div class="half-width" id=k-two>
                             <p>Ring op eller skriv en email for at høre om ledige værelser</p>
-                            <p>Tlf.: 71992300 <br> Email: bb@vangbergs.dk</p>
+                            <p><span class="tlf-mail">Tlf.: 71 99 23 00 <br> Email: bb@vangbergs.dk</span></p>
                             <p>Betaling kontant eller MobilePay</p>
                             <p>Vangbergs B&B <br> Vester Korupvej 26 <br> 9560 Hadsund</p>
                         </div>
@@ -90,6 +83,5 @@
                     </div>
                 </section>
             </main>
-        </section>
     </body>
 </html>
